fix accessibility issues

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1{
     font-weight: 400;
     font-style: normal;
     font-size: 120px;
-    color: lightgray;
+    color: white;
     margin-left: 10%;
 }
 
